--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "dependencies": {
     "@rblanchet/d2-protocol": "^2.61.7",
     "dotenv": "^10.0.0",
-    "frida": "^15.1.3"
+    "express": "^4.17.1",
+    "frida": "^15.1.3",
+    "lzma": "^2.3.2",
+    "lzma-native": "^8.0.1",
+    "socket.io": "^4.2.0",
+    "socket.io-client": "^4.2.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
