--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/plugin-proposal-private-methods": "^7.14.5",
+    "@babel/preset-env": "^7.15.8",
+    "axios": "^0.23.0",
     "core-js": "^3.6.5",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^10",
     "vue": "^2.6.11",
     "vue-json-viewer": "^2.2.19",
     "vue-router": "^3.2.0",
