--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "d2.sniffer",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Sniffer pour le jeu Dofus",
   "main": "main.js",
   "dependencies": {
-    "@rblanchet/d2-protocol": "^2.61.8",
+    "@rblanchet/d2-protocol": "latest",
+    "concurrently": "^6.3.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "frida": "^15.1.3",
@@ -14,6 +15,7 @@
     "socket.io-client": "^4.2.0"
   },
   "scripts": {
+    "start": "concurrently \"node main.js\" \"npm run serve --prefix ./app\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
