--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "name": "d2.sniffer",
-  "version": "1.0.0",
-  "description": "Sniffer pour le jeu Dofus",
-  "main": "main.js",
-  "dependencies": {
-    "@rblanchet/d2-protocol": "latest",
-    "concurrently": "^6.3.0",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "frida": "^15.1.3",
-    "lzma": "^2.3.2",
-    "lzma-native": "^8.0.1",
-    "socket.io": "^4.2.0",
-    "socket.io-client": "^4.2.0"
-  },
+  "name": "app",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "start": "concurrently \"node main.js\" \"npm run serve --prefix ./app\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "vue-cli-service serve --open",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/RBlanchet/D2.Sniffer.git"
+  "dependencies": {
+    "@babel/plugin-proposal-private-methods": "^7.14.5",
+    "@babel/preset-env": "^7.15.8",
+    "core-js": "^3.6.5",
+    "jsonpath-plus": "^6.0.1",
+    "vue": "^2.6.11",
+    "vue-json-viewer": "^2.2.19",
+    "vue-router": "^3.2.0",
+    "vuesax": "^4.0.1-alpha.25",
+    "vuex": "^3.4.0"
   },
-  "author": "RBlanchet",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/RBlanchet/D2.Sniffer/issues"
-  },
-  "homepage": "https://github.com/RBlanchet/D2.Sniffer#readme"
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^10",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "vue-template-compiler": "^2.6.11"
+  }
 }
